# shapes

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  conanfile.py
src/: CMakeLists.txt  main.cpp
